--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql+psycopg2://<user>:<password>@<host>:5432/<db>
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/realestate_marketplace_db
 SECRET_KEY=admin-secret-key
 CORS_ORIGINS=https://your‑frontend‑url.com
