--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ python-dotenv = "*"
 faker = "*"
 marshmallow = "<4.0.0"
 wtforms = "<3.2"
+cloudinary = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 pytest = "*"
